# sublack

./: .coveragerc  .gitattributes  .gitignore  .pyup.yml  .travis.yml  CHANGELOG  Context.sublime-menu  Default (Linux).sublime-keymap  Default (OSX).sublime-keymap  Default (Windows).sublime-keymap  Default.sublime-commands  LICENSE  Main.sublime-menu  Makefile  Pipfile  README.md  README.rst  __init__.py  appveyor.yml  blacker.py  commands.py  consts.py  dependencies.json  env.example  folding.py  main.py  messages.json  pyrightconfig.json  pytest.ini  sb.py  server.py  setup.cfg  setup.py  sublack.py  sublack.sublime-project  sublack.sublime-settings  sublack.sublime-workspace  unittesting.json  utils.py  wip.py
_sublack/: commands.py  sublack.py  utils.py
docs/: Makefile  conf.py  index.rst
messages/: 1.7.0.txt  1.8.0.txt  1.8.1.txt  install.txt
sublack/: __init__.py  blacker.py  checker.py  commands.py  consts.py  folding.py  rien.py  server.py  sublack.py  todo.txt  utils.py  wip.py
sublack/toml/: decoder.py  encoder.py  tz.py
tests/: .pre-commit-config.yaml  conftest.py  diff.txt  fixtures.py  fixtures.pyi  test_black.py  test_blackd.py  test_blacker.py  test_checker.py  test_commands.py  test_folding.py  test_server.py  test_sublack.py  test_utils.py  wip.py
