[metadata]
name = sublack
summary = Black integration for SublimeText
description-file = README.rst
author = Jimmy Girardet
author-email = ijkl@netc.fr
home-page = https://github.com/jgirardet/sublack
classifier =
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.5

[files]
packages =
    sublack
; add datafile to be included in your distribution packages here, ex:
; data-files = frontend = frontend/dist/*

; If your library has a CLI, define here the entry point
; [entry_points]
; console_scripts =
;     dopplerr = dopplerr.main:main

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_sphinx]
upload-dir = docs/_build/html

[pbr]
warnerrors = True


[pep8]
max-line-length = 100

[flake8]
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501

[isort]
line_length = 100
known_future_library = future
known_third_party =
default_section = THIRDPARTY
known_first_party =
    sublack
sections =
    FUTURE,
    STDLIB,
    THIRDPARTY,
    FIRSTPARTY,
    LOCALFOLDER,
min-similarity-lines=5
ignore-comments=yes
ignore-docstrings=yes
ignore-imports=yes
import_heading_stdlib=Standard Libraries
import_heading_thirdparty=Third Party Libraries
import_heading_firstparty=sublack
